# arcon

execution-plane/arcon/arcon_state/: Cargo.toml  experiment-results-arcon1.csv  experiment_results-laptop.csv  run_perf_experiment.sh  run_resource_usage_experiment.sh
execution-plane/arcon/arcon_state/examples/: perf_experiment.rs  resource_usage_experiment.rs
execution-plane/arcon/arcon_state/res/: experiment_results.csv  experiment_results_ops.csv  raw_results_1_128_512_Faster_1  raw_results_1_128_512_Faster_10  raw_results_1_128_512_Faster_100  raw_results_1_128_512_Faster_3  raw_results_1_128_512_InMemory_1  raw_results_1_128_512_Rocks_1  raw_results_1_128_512_Sled_1  raw_results_1_32_128_Faster_1  raw_results_1_32_128_Faster_10  raw_results_1_32_128_Faster_100  raw_results_1_32_128_Faster_3  raw_results_1_32_128_InMemory_1  raw_results_1_32_128_Rocks_1  raw_results_1_32_128_Sled_1  raw_results_1_512_2048_Faster_1  raw_results_1_512_2048_Faster_10  raw_results_1_512_2048_Faster_100  raw_results_1_512_2048_Faster_3  raw_results_1_512_2048_InMemory_1  raw_results_1_512_2048_Rocks_1  raw_results_1_512_2048_Sled_1  raw_results_1_8_32_Faster_1  raw_results_1_8_32_Faster_10  raw_results_1_8_32_Faster_100  raw_results_1_8_32_Faster_3  raw_results_1_8_32_InMemory_1  raw_results_1_8_32_Rocks_1  raw_results_1_8_32_Sled_1  raw_results_2_128_512_Faster_1  raw_results_2_128_512_Faster_10  raw_results_2_128_512_Faster_100  raw_results_2_128_512_Faster_3  raw_results_2_128_512_InMemory_1  raw_results_2_128_512_Rocks_1  raw_results_2_128_512_Sled_1  raw_results_2_32_128_Faster_1  (+104 more)
(+138 files in other folders)
