[package]
name = "arcon_state"
version = "0.1.1"
authors = ["Mikołaj Robakowski <mikolajr@kth.se>"]
edition = "2018"
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/cda-group/arcon"
homepage = "https://github.com/cda-group/arcon"
description = """
State management features for Arcon
"""

[features]
default = []
rocks = ["rocksdb"]
faster = ["faster-rs", "serde", "serde_bytes"]
fill_up = ["fastrand"]
sled_checkpoints = ["sled"]
# adds iteration features to the FASTER backend, but also makes it slower
slower_faster = []

[dependencies]
prost = { git = "https://github.com/Max-Meldrum/prost.git", branch = "derive_generics" }
bytes = "0.5"
snafu = "0.6"
custom_debug = "0.4"
smallbox = { version = "0.8", features = ["coerce"] }
tempfile = "3.1"
once_cell = "1.3"
fs_extra = "1.2.0"

serde = { version = "1.0", features = ["serde_derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }
rocksdb = { git = "https://github.com/mrobakowski/rust-rocksdb.git", branch = "arcon", optional = true } # TODO
sled = { version = "0.34.4", optional = true }
fastrand = { version = "1.3.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
faster-rs = { git = "https://github.com/mrobakowski/faster-rs.git", optional = true }

[dev-dependencies]
fastrand = "1.3.3"
